# python-project-83

./: .env_example  Makefile  README.md  build.sh  database.sql  pyproject.toml  sectret.env
.github/workflows/: my_workflow.yml
page_analyzer/: __init__.py  app.py  data_base.py  parser.py  url_validator.py
page_analyzer/templates/: footer.html  header.html  index.html  url.html  urls.html
page_analyzer/templates/errors/: 404.html  500.html
